force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <description>Custom Object that stores the information related to a flight between two airports.</description>
    <label>Flight</label>
    <nameField>
        <label>Flight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>