force-app/main/default/objects/Flight__c/fields/Arrival_airport_name__c.field-meta.xml
<CustomField>
    <fullName>Arrival_airport_name__c</fullName>
    <formula>Arrival_Airport__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival airport name</label>
    <type>Text</type>
</CustomField>