force-app/main/default/objects/Flight__c/fields/Departure_airport_name__c.field-meta.xml
<CustomField>
    <fullName>Departure_airport_name__c</fullName>
    <formula>Departure_Airport__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure airport name</label>
    <type>Text</type>
</CustomField>