force-app/main/default/objects/Flight__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <description>Distance in Km between the departure and the arrival airports</description>
    <label>Distance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>